Fix dei warning, javadoc exception